ensureRowIsVisible was added. And twisty removed from css

--- a/skin/tree.css
+++ b/skin/tree.css
@@ -27,6 +27,6 @@
   color: black;
 }
 
-/*#tt-treechildren:-moz-tree-twisty {*/
-  /*list-style-image: url();*/
-/*}*/
+#tt-treechildren:-moz-tree-twisty {
+  list-style-image: none;
+}
